deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lerh-api
  namespace: systid
  labels:
    app: lerh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lerh
  template:
    metadata:
      labels:
        app: lerh
    spec:
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - name: lerh-api
          image: abiyo27/lerh:0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
